[gd_scene load_steps=6 format=3 uid="uid://drlbsodypev3g"]

[ext_resource type="Script" uid="uid://jrl1634sm6lb" path="res://Scripts/Componentes/MenuPrincipal.gd" id="1_sgs44"]
[ext_resource type="AudioStream" uid="uid://cjorej6h7gw75" path="res://Audio/SFX/MENU INICIAL/menu_musica.mp3" id="2_3fsnc"]
[ext_resource type="Texture2D" uid="uid://ciudp1bvjo4s5" path="res://Sprites/UI/Telainicial/01.png" id="2_hkuru"]
[ext_resource type="AudioStream" uid="uid://w484n11fqypl" path="res://Audio/SFX/MENU INICIAL/selecao_menu.mp3" id="4_6y4ar"]
[ext_resource type="Script" uid="uid://dd16yu704x6wt" path="res://Scripts/Componentes/BGM_Player.gd" id="5_e3fqx"]

[node name="MenuPrincipal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sgs44")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_hkuru")

[node name="HBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 276.0
offset_top = -18.0
offset_right = 626.0
offset_bottom = 211.0
grow_vertical = 2
theme_override_constants/separation = 20

[node name="NovoJogo" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(350, 100)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "Novo Jogo"

[node name="Continuar" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(350, 100)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "Continuar"

[node name="Sair" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(350, 100)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "Sair"

[node name="BtnSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_6y4ar")

[node name="BGM_Player" type="Node" parent="."]
script = ExtResource("5_e3fqx")
musica = ExtResource("2_3fsnc")
metadata/_custom_type_script = "uid://dd16yu704x6wt"

[connection signal="pressed" from="HBoxContainer/NovoJogo" to="." method="_on_main_pressed"]
[connection signal="pressed" from="HBoxContainer/Continuar" to="." method="_on_fase_teste_pressed"]
[connection signal="pressed" from="HBoxContainer/Sair" to="." method="_on_sair_pressed"]
